fix: dark mode for links on hover

--- a/site/src/css/custom.css
+++ b/site/src/css/custom.css
@@ -42,3 +42,8 @@ html[data-theme="dark"] .docusaurus-highlight-code-line {
 html[data-theme="dark"] main img {
   filter: invert(1);
 }
+
+
+html[data-theme="dark"] .menu__link:hover {
+  color: var(--ifm-menu-color-active);
+}
